# MageBattle

./: .gitignore  Cargo.toml  Diagrams.md  README.md  taplo.toml
.cargo/: config.toml
server/: Cargo.toml
server/src/: actors.rs  gameserver.rs  main.rs
server/src/actors/: lobby.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs  tcpstream.rs  ws.rs
