[package]
name = "mage_battle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-recursion = "1.0"
clap = { version = "4.0.18", features = ["derive"] }
futures = "0.3"
glam = { version = "0.14", features = ["scalar-math", "serde"] }
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
macroquad = "0.3.24"
mio = { version = "0.8", features = ["net", "os-poll"] }
pretty_env_logger = "0.4"
shared = { path = "shared" }
tungstenite = "0.17"

[workspace]
members = ["server", "shared"]
