[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
futures-util = "0.3"
glam = { version = "0.14", features = ["scalar-math", "serde"] }
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
shared = { path = "../shared" }
tokio = { version = "1.1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
