[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.66"
glam = { version = "0.14", features = ["scalar-math", "serde"] }
packed_struct = { version = "0.10.0", features = ["use_serde"] }
serde = { version = "1.0.147", features = ["derive"] }

bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1.0", optional = true }
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "serde"] }
fern = "0.6.2"
humantime = "2.1.0"
log = "0.4.18"
chrono = "0.4.26"

[features]
binary = ["bincode"]
json = ["serde_json"]
